# TinkerModellor

./: .gitignore  LICENSE  OpenJournalsPDFGenerator.yml  README.md  TKM_temp.gro.backup  TinkerModellor An Efficient Tool for Building Biological Systems in Tinker Simulations.docx  dna.sh  env.yml  install.sh  issiue.txt  module_test.py  paper.bib  paper.crossref  paper.md  pyproject.toml  reinstall.sh  setup.py  test.sh  test_Ex.dx  test_Ey.dx  test_Ez.dx  test_Magnitude.dx  tinker.xyz  tkm.py  work  ~$nkerModellor An Efficient Tool for Building Biological Systems in Tinker Simulations.docx
example/amber_format/: solvate.inpcrd
example/rmsd/: TKM_rmsd.csv  pr_coord.arc  pr_coord.xyz
example/rna/: dna.gro  dna.xyz  posre_RNA_chain_A.itp  topol.top  topol_RNA_chain_A.itp
example/test/: test.xyz
src/func/: angle.cpp  distance.cpp  rmsd.cpp  tkmtoolkit.cpp
src/include/: angle.h  distance.h  rmsd.h
test/: conftest.py  test_delete.py  test_format.py  test_merge.py  test_transform&delete.py  test_transform.py
test/.pytest/: 134L.xyz  1ALB.xyz  1BHZ.xyz  amoebabio18.prm  complex-gromacs.xyz
test/dataset/: README.md
test/test_cache/: asp_transformed.xyz  cys_transformed.xyz  glu_transformed.xyz  his_transformed.xyz  lys_transformed.xyz
tinkermodellor/: __init__.py  main.py  nameformat_log.txt  subgraph.py
tinkermodellor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tinkermodellor/messager/: __init__.py  _connect_reminder.py  _delete_reminder.py  _ef_reminder.py  _gmxsystem_reminder.py  _merge_reminder.py  _tinkersystem_reminder.py  _trajctory_reminder.py  (+1 more)
(+84 files in other folders)
