[build-system]
requires = ["setuptools>=40.8.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "TinkerModellor"
version = "1.1"
description = "A Python package with C++ extension"
authors = [
    { name = "Xuxjian Wang, Junhong Li and Haodong Liu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
tkm = "tinkermodellor.main:main"

